# AI-STORY-GENERATORR

./: .gitignore  README.md  Untitled-1.ipynb  config.json  pyproject.toml
app/: app.py  database.py  db_models.py  main.py  schemas.py
app/cache/: redis_cache.py
app/models/: model_loader.py
app/streamlit_frontend/: config.py  streamlit_app.py
app/tools/: entity_extractor.py  sentiment_analyzer.py  story_generator.py  style_enhancer.py  summarizer.py  theme_detector.py  title_generator.py
app/utils/: mail_utils.py  prompt_builder.py  ratelimiter.py
